apps/hello-gitops/base/deploy.yml
# Rollout Strategy
apiVersion: argoproj.io/v1alpha1               # Create a rollout resource
kind: Rollout
metadata:
  name: hello-gitops
spec:
  replicas: 5
  workloadRef:                                 # Reference an existing Deployment using workloadRef field
    apiVersion: apps/v1
    kind: Deployment
    name: hello-gitops
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause: {duration: 10s}

---
# create a service for hello-gitops
apiVersion: v1
kind: Service
metadata:
  name: hello-gitops
  namespace: hello-gitops
  labels:
    app: hello-gitops
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hello-gitops.diegoluisi.eti.br
spec:
  ports:
    - port: 8000
      name: tcp-node
  selector:
    app: hello-gitops
    tier: frontend
  type: ClusterIP
---
# create deployment for hello-gitops
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: hello-gitops
  namespace: hello-gitops
  labels:
    app: hello-gitops
    version: latest
spec:
  replicas: 0 
  selector:
    matchLabels:
      app: hello-gitops
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: hello-gitops
        tier: frontend
        version: 1.0.2
    spec:
      containers:
        - image: diegoluisi/hello-gitops:latest
          name: hello-gitops
          ports:
            - containerPort: 8000
              name: hello-gitops
          resources:
            requests:
              cpu: 50m
            limits:
              cpu: 100m
