apps/hello-gitops/base/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-gitops
  namespace: hello-gitops
spec:
  hosts:
  - "hello-gitops.diegoluisi.eti.br"
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8000
        host: hello-gitops
